@@ -1,5 +1,8 @@
 Mon Oct 11 23:35:19 1999  Jeffrey A Law  (law@cygnus.com)
 
+	Fri Aug 27 19:19:43 CEST 1999	Marc Espie <espie@cvs.openbsd.org>
+	* config/openbsd.h (SET_ASM_OP): Define.
+
 	Mon Oct  4 08:54:12 1999  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 	* cppinit.c (is_idchar initializer): Loosen tests to accept
 	gcc 2.>6 and >2.
